# xlsx-drive-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/superpowers/plans/: 2026-07-18-xlsx-drive-mcp.md
docs/superpowers/specs/: 2026-07-18-xlsx-drive-mcp-design.md
src/xlsx_drive_mcp/: auth.py  drive.py  server.py
src/xlsx_drive_mcp/tools/: charts.py  data.py  files.py  format.py  formulas.py  sheets.py
tests/: conftest.py
tests/fixtures/: create_fixtures.py  formatting.xlsx  formulas.xlsx  merged_cells.xlsx  multi_sheet.xlsx  named_ranges.xlsx
tests/integration/: test_drive_roundtrip.py
tests/unit/: test_auth.py  test_charts.py  test_data.py  test_drive.py  test_files.py  test_format.py  test_formulas.py  test_sheets.py
